--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -816,11 +816,11 @@ pluto-output {
 }
 
 pluto-cell.depends_on_disabled_cells > pluto-output,
-pluto-cell.is_running_disabled > pluto-output {
+pluto-cell.running_disabled > pluto-output {
     opacity: 0.3;
 }
 
-pluto-cell.is_running_disabled > pluto-output {
+pluto-cell.running_disabled > pluto-output {
     background-color: rgba(139, 139, 139, 0.25);
 }
 
@@ -952,11 +952,11 @@ pluto-cell.code_differs > pluto-input > .CodeMirror {
 }
 
 pluto-cell.depends_on_disabled_cells > pluto-input .CodeMirror,
-pluto-cell.is_running_disabled > pluto-input .CodeMirror {
+pluto-cell.running_disabled > pluto-input .CodeMirror {
     opacity: 0.3;
 }
 
-pluto-cell.is_running_disabled > pluto-input .CodeMirror {
+pluto-cell.running_disabled > pluto-input .CodeMirror {
     background-color: rgba(139, 139, 139, 0.25);
 }
 
@@ -1156,11 +1156,11 @@ body:not(.___) pluto-cell.running.errored > pluto-trafficlight::after {
 }
 
 pluto-cell.depends_on_disabled_cells > pluto-trafficlight,
-pluto-cell.is_running_disabled > pluto-trafficlight {
+pluto-cell.running_disabled > pluto-trafficlight {
     background-color: rgb(255, 255, 255);
 }
 
-pluto-cell.is_running_disabled:not(.asjkdhf) > pluto-trafficlight {
+pluto-cell.running_disabled:not(.asjkdhf) > pluto-trafficlight {
     background-color: rgba(139, 139, 139, 0.25);
     opacity: 0.3;
 }
