--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -1331,11 +1331,11 @@ ul.input_menu {
     margin: 0;
 }
 .input_menu li {
-    font-family: system-ui;
+    font-family: "Roboto Mono", system-ui;
     font-size: .8rem;
     margin-block-end: 0px;
-    letter-spacing: -0.05em;
-    color: #333333ff;
+    letter-spacing: -0.02em;
+    color: #6b6a6a;
     position: relative;
     list-style: none;
     padding: 8px;
@@ -1392,6 +1392,7 @@ ul.input_menu {
 
 .disable_cell_icon {
     background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/ban-outline.svg);
+    background-size: 15px;
 }
 .delete_icon {
     background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/close-circle-outline.svg);
