--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -1502,8 +1502,8 @@ pkg-popup {
     z-index: 50;
     /* left: 1.5em; */
     /* top: calc((1.5em - 200px) * 0.5); */
-    width: 200px;
-    min-height: 80px;
+    width: min(90vw, 269px);
+    /* min-height: 80px; */
     margin-left: 1.1rem;
     margin-top: calc(0.5 * (1rem - 80px));
     background: rgb(255, 255, 255);
@@ -1511,9 +1511,7 @@ pkg-popup {
     border-radius: 10px;
     padding: 8px;
     overflow-wrap: break-word;
-
     font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-
     opacity: 0;
     transform: scale(0.2);
     transform-origin: left;
@@ -1561,6 +1559,7 @@ pkg-terminal {
     max-height: 10rem;
     overflow-y: auto;
     cursor: text;
+    margin-top: 6px;
 }
 
 pkg-terminal pre {
