--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -1556,18 +1556,27 @@ pkg-popup .toggle-terminal {
 pkg-terminal {
     display: block;
     /* width: 20rem; */
-    max-height: 10rem;
-    overflow-y: auto;
     cursor: text;
     margin-top: 6px;
+    background: #232433;
+    color: #ffffff;
+    border-radius: 6px;
+    border: 3px solid #c3c3c3;
+    padding: 3px;
+}
+
+pkg-terminal > .scroller {
+    max-height: 10rem;
+    overflow-y: auto;
+    padding: 4px;
 }
 
 pkg-terminal pre {
     white-space: pre-wrap;
     word-break: break-all;
-
     font-size: 0.6rem;
     font-family: "Space Mono", monospace;
+    margin: 0;
 }
 
 pkg-popup pkg-terminal {
