--- a/frontend/treeview.css
+++ b/frontend/treeview.css
@@ -1,9 +1,6 @@
-/* @import url("https://cdn.jsdelivr.net/npm/fontsource-space-mono@4.0.0/400.css");
-@import url("https://cdn.jsdelivr.net/npm/fontsource-space-mono@4.0.0/400-italic.css");
-@import url("https://cdn.jsdelivr.net/npm/fontsource-space-mono@4.0.0/700.css"); */
-@import url("https://cdn.jsdelivr.net/npm/fontsource-roboto-mono@3.0.3/400.css");
-@import url("https://cdn.jsdelivr.net/npm/fontsource-roboto-mono@3.0.3/400-italic.css");
-@import url("https://cdn.jsdelivr.net/npm/fontsource-roboto-mono@3.0.3/700.css");
+@import url("https://cdn.jsdelivr.net/npm/@fontsource/roboto-mono@4.4.5/400.css");
+@import url("https://cdn.jsdelivr.net/npm/@fontsource/roboto-mono@4.4.5/400-italic.css");
+@import url("https://cdn.jsdelivr.net/npm/@fontsource/roboto-mono@4.4.5/700.css");
 
 @import url("juliamono.css");
 
