--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -669,6 +669,8 @@ body.binder > header > nav#at_the_top > pluto-filepicker > a {
     text-decoration: none;
 }
 
+body.nbpkg_restart_recommended > header,
+body.nbpkg_restart_required > header,
 body.binder.loading > header,
 body.process_dead > header,
 body.disconnected > header {
@@ -678,6 +680,12 @@ body.disconnected > header {
     -webkit-backdrop-filter: blur(10px);
 }
 
+body.nbpkg_restart_recommended > header {
+    background-color: rgba(114, 192, 255, 0.56);
+}
+body.nbpkg_restart_required > header {
+    background-color: rgba(170, 41, 32, 0.56);
+}
 body.process_dead > header {
     background-color: rgb(230 88 46 / 38%);
 }
@@ -1417,6 +1425,202 @@ pluto-input > button.delete_cell > span.icon::after {
     background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/ellipsis-horizontal-circle-outline.svg);
 }
 
+/* PKG UI */
+
+body.nbpkg_disabled pkg-status-mark,
+body.nbpkg_disabled pkg-popup {
+    display: none;
+}
+
+pkg-status-mark {
+    width: 1em;
+    height: 1em;
+    margin: 0px .6em 0px 0.2em;
+    display: inline-block;
+}
+
+pkg-status-mark > button {
+    margin: 0px;
+    padding: 0px;
+    border: none;
+    background: none;
+    cursor: context-menu;
+    position: relative;
+    top: -0.2em;
+
+    /* background: rgba(127, 176, 76, 0.24);
+    border: 3px solid rgba(84, 182, 237, 0);
+    border-radius: 5px; */
+}
+
+pkg-status-mark > button > span::after {
+    display: inline-block;
+    content: " " !important;
+    background-size: 1.5em;
+    height: 1.5em;
+    width: 1.5em;
+
+    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/time-outline.svg);
+    opacity: 0.3;
+}
+
+pkg-status-mark.installed > button > span::after {
+    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/checkmark-outline.svg);
+    /* background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/cloud-done-outline.svg); */
+}
+pkg-status-mark.busy > button > span::after {
+    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/sync-outline.svg);
+    animation: loadspin 3s ease-in-out infinite;
+}
+pkg-status-mark.not_found > button > span::after {
+    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/cloud-offline-outline.svg);
+    opacity: 0.6;
+}
+pkg-status-mark.will_be_installed > button > span::after {
+    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/cloud-download-outline.svg);
+    opacity: 0.6;
+}
+pkg-status-mark select {
+    width: 100%;
+    white-space: nowrap;
+    border: none;
+    background-color: transparent;
+    font-size: 0.65rem;
+    font-family: "Space Mono", monospace;
+    font-weight: 500;
+    text-align: center;
+    text-align-last: center;
+}
+
+pkg-status-mark option {
+    background: #d3752538;
+    color: #00000060;
+}
+pkg-status-mark option.installed {
+    background: unset;
+    color: black;
+}
+
+pkg-popup {
+    display: block;
+    position: absolute;
+    z-index: 50;
+    /* left: 1.5em; */
+    /* top: calc((1.5em - 200px) * 0.5); */
+    width: min(90vw, 251px);
+    /* min-height: 80px; */
+    margin-left: 1.1rem;
+    margin-top: calc(0.5 * (1rem - 80px));
+    background: rgb(255, 255, 255);
+    border: 3px solid #f0e4ee;
+    border-radius: 10px;
+    padding: 8px;
+    overflow-wrap: break-word;
+    font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+    opacity: 0;
+    transform: scale(0.2);
+    transform-origin: left;
+    transition: transform 0.5s ease-in-out, opacity 0.1s ease-in-out;
+    pointer-events: none;
+}
+
+pkg-popup.visible {
+    opacity: 1;
+    transform: scale(1);
+    transition: transform 0.2s ease-in-out, opacity 0.2s ease-in-out;
+    pointer-events: initial;
+}
+
+pkg-popup.busy {
+    border: 3px solid hsl(282deg 31% 62%);
+}
+
+pkg-version {
+    font-family: "Space Mono", monospace;
+    font-size: 0.75rem;
+    opacity: 0.5;
+}
+
+
+pkg-popup .pkg-buttons {
+    float: right;
+    /* position: absolute; */
+    /* right: 0px; */
+    /* bottom: 0px; */
+    display: inline-flex;
+    height: 1em;
+    flex-direction: row;
+}
+
+pkg-popup .pkg-buttons > * {
+    display: block;
+    height: 17px;
+    padding: 4px;
+    box-sizing: content-box;
+    background: white;
+    border-radius: 10px;
+    z-index: 52;
+    margin-left: -4px;
+}
+
+pkg-popup .toggle-terminal {
+    right: 20px;
+}
+
+pkg-terminal {
+    display: block;
+    /* width: 20rem; */
+    cursor: text;
+    margin-top: 6px;
+    background: #232433;
+    color: #ffffff;
+    border-radius: 6px;
+    border: 3px solid #c3c3c3;
+    padding: 3px;
+}
+
+pkg-terminal > .scroller {
+    max-height: 10rem;
+    overflow-y: auto;
+    padding: 4px;
+    width: 100%;
+}
+
+pkg-terminal pre {
+    white-space: pre-wrap;
+    word-break: break-all;
+    font-size: 0.6rem;
+    font-family: "Space Mono", monospace;
+    margin: 0;
+}
+
+pkg-popup pkg-terminal {
+    display: none;
+}
+
+pkg-popup.showterminal pkg-terminal {
+    display: block;
+}
+
+@keyframes loadspin {
+    0% {
+        transform: rotate(0deg);
+    }
+    25% {
+        transform: rotate(180deg);
+    }
+    50% {
+        transform: rotate(180deg);
+    }
+    75% {
+        transform: rotate(360deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+
 /* RUNAREA */
 
 pluto-runarea {
@@ -2009,6 +2213,8 @@ li.CodeMirror-hint.c_Array::before,
     color: #ef6155;
 }
 
+li.CodeMirror-hint.c_package::before,
+li.CodeMirror-hint.c_Module::before,
 .cm-s-default span.cm-link {
     color: #815ba4;
 }
