--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -1318,12 +1318,13 @@ pluto-cell > button.add_cell > span::after {
     /* background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/add-circle-outline.svg); */
     background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/add-outline.svg);
 }
-pluto-input > button.delete_cell .input_menu {
+pluto-input > button.delete_cell ul.input_context_menu {
     --width: 156px;
     left: 100%;
+    top: -8px;
+    margin: 0;
     padding: 0px;
     border-radius: 6px;
-    top: -8px;
     display: block;
     position: absolute;
     border: 1px solid rgba(0, 0, 0, 0.1);
@@ -1331,7 +1332,7 @@ pluto-input > button.delete_cell .input_menu {
 }
 @media screen and (min-width: 921px) {
 
-    pluto-input > button.delete_cell .input_menu {
+    pluto-input > button.delete_cell .input_context_menu {
         left: calc(100% - 3px);
     }
 }
@@ -1339,14 +1340,11 @@ pluto-input > button.delete_cell .input_menu {
     pluto-input > button.delete_cell  {
         z-index: 31;
     }
-    pluto-input > button.delete_cell .input_menu {
+    pluto-input > button.delete_cell .input_context_menu {
         left: calc(100% - var(--width) - 36px);
     }
 }
-ul.input_menu {
-    margin: 0;
-}
-.input_menu li {
+.input_context_menu li {
     font-family: "Roboto Mono", system-ui;
     font-size: .8rem;
     margin-block-end: 0px;
@@ -1362,24 +1360,24 @@ ul.input_menu {
     justify-content: flex-start;
     border-radius: 2px;
 }
-.input_menu li:last-child {
+.input_context_menu li:last-child {
     border-bottom-left-radius: 6px;
     border-bottom-right-radius: 6px;
 }
-.input_menu li:first-child {
+.input_context_menu li:first-child {
     border-top-left-radius: 6px;
     border-top-right-radius: 6px;
 }
 
-.input_menu li.coming_soon {
+.input_context_menu li.coming_soon {
     color: #55555544;
 }
-.input_menu li.coming_soon:hover {
+.input_context_menu li.coming_soon:hover {
     cursor: not-allowed;
     background-color:rgba(0, 0, 0, 0.1)
 }
 
-.input_menu li:hover {
+.input_context_menu li:hover {
     transition-property: background-color;
     transition-duration: 200ms; 
     background-color:rgba(0, 0, 0, 0.1)
