--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -25,7 +25,7 @@
     /* use the value "contextual" to enable contextual ligatures `document.documentElement.style.setProperty('--pluto-operator-ligatures', 'contextual');`
         for julia mono see here: https://cormullion.github.io/pages/2020-07-26-JuliaMono/#contextual_and_stylistic_alternates_and_ligatures */
     --pluto-operator-ligatures: none;
-    --sans-serif-font-stack: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    --sans-serif-font-stack: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 /* GENERAL PAGE LAYOUT */
@@ -400,7 +400,7 @@ kbd {
 
 /* Avoid scrollbar in in-line latex with markdown, see https://github.com/fonsp/Pluto.jl/issues/1309 */
 pluto-output mjx-assistive-mml {
-	height: 1px;
+    height: 1px;
 }
 
 /* HEADER */
@@ -947,6 +947,9 @@ pluto-cell:hover > pluto-output > div::-webkit-scrollbar-thumb {
 pluto-input .CodeMirror {
     height: auto !important;
     width: auto;
+}
+pluto-input .cm-editor,
+pluto-input .CodeMirror {
     z-index: 20;
     border-bottom-right-radius: 4px;
     border: 1px solid rgba(0, 0, 0, 0.1);
@@ -966,16 +969,20 @@ pluto-cell:not(.show_input) > pluto-input {
     display: none;
 }
 
+pluto-cell.code_differs > pluto-input > .cm-editor,
 pluto-cell.code_differs > pluto-input > .CodeMirror {
     border: 1px solid hsla(46, 70%, 37%, 0.68);
     border-left: none;
 }
 
+pluto-cell.depends_on_disabled_cells > pluto-input .cm-editor,
 pluto-cell.depends_on_disabled_cells > pluto-input .CodeMirror,
+pluto-cell.running_disabled > pluto-input .cm-editor,
 pluto-cell.running_disabled > pluto-input .CodeMirror {
     opacity: 0.3;
 }
 
+pluto-cell.running_disabled > pluto-input .cm-editor,
 pluto-cell.running_disabled > pluto-input .CodeMirror {
     background-color: rgba(139, 139, 139, 0.25);
 }
@@ -1336,13 +1343,12 @@ pluto-input > button.delete_cell ul.input_context_menu {
     background-color: white;
 }
 @media screen and (min-width: 921px) {
-
     pluto-input > button.delete_cell ul.input_context_menu {
         left: calc(100% - 3px);
     }
 }
 @media screen and (max-width: 920px) {
-    pluto-input > button.delete_cell  {
+    pluto-input > button.delete_cell {
         z-index: 31;
     }
     pluto-input > button.delete_cell ul.input_context_menu {
@@ -1351,7 +1357,7 @@ pluto-input > button.delete_cell ul.input_context_menu {
 }
 .input_context_menu li {
     font-family: "Roboto Mono", system-ui;
-    font-size: .8rem;
+    font-size: 0.8rem;
     margin-block-end: 0px;
     letter-spacing: -0.02em;
     color: #6b6a6a;
@@ -1379,22 +1385,22 @@ pluto-input > button.delete_cell ul.input_context_menu {
 }
 .input_context_menu li.coming_soon:hover {
     cursor: not-allowed;
-    background-color:rgba(0, 0, 0, 0.1)
+    background-color: rgba(0, 0, 0, 0.1);
 }
 
 .input_context_menu li:hover {
     transition-property: background-color;
-    transition-duration: 200ms; 
-    background-color:rgba(0, 0, 0, 0.1)
+    transition-duration: 200ms;
+    background-color: rgba(0, 0, 0, 0.1);
 }
 
 .disable_cell_icon,
-.delete_icon, 
+.delete_icon,
 .enable_cell_icon,
 .bandage_icon,
 .icon {
     --size: 17px;
-    width:  var(--size);
+    width: var(--size);
     height: var(--size);
     margin-top: 1px;
     background-size: var(--size) var(--size);
@@ -1438,7 +1444,7 @@ body.nbpkg_disabled pkg-status-mark:not(.disable_pkg) {
 pkg-status-mark {
     width: 1em;
     height: 1em;
-    margin: 0px .6em 0px 0.2em;
+    margin: 0px 0.6em 0px 0.2em;
     display: inline-block;
 }
 
@@ -1548,7 +1554,6 @@ pkg-version {
     opacity: 0.5;
 }
 
-
 pkg-popup .pkg-buttons {
     float: right;
     /* position: absolute; */
@@ -1626,7 +1631,6 @@ pkg-popup.showterminal pkg-terminal {
         transform: rotate(360deg);
     }
 }
-
 
 /* RUNAREA */
 
@@ -2081,16 +2085,23 @@ ul.CodeMirror-hints {
     margin-left: -1.5em;
 }
 
+pluto-input .cm-editor .cm-content,
+pluto-input .cm-editor .cm-scroller,
+pluto-input .cm-editor,
 pluto-input .CodeMirror,
 ul.CodeMirror-hints {
     font-family: JuliaMono, monospace !important;
     font-variant-ligatures: none;
-    font-size: 0.75em;
+    font-size: 0.75rem;
 }
 
+.cm-editor,
 .cm-s-default.CodeMirror {
     background: hsla(46, 90%, 98%, 1);
     color: #41323f;
+}
+.cm-editor.cm-focused {
+    outline: unset;
 }
 
 .cm-s-default.CodeMirror pre.CodeMirror-line,
@@ -2114,12 +2125,22 @@ ul.CodeMirror-hints {
     background: #d9dfef;
 }
 
+.cm-editor .cm-gutter.cm-foldGutter {
+    display: none !important;
+}
+
+.cm-editor .cm-gutter {
+    min-width: 29px;
+}
+
+.cm-editor .cm-gutters,
 .cm-s-default .CodeMirror-gutters {
     /* background: hsla(46, 90%, 98%, 1); */
     background: transparent;
     border-right: solid 1px hsla(0, 0%, 0%, 0);
 }
 
+pluto-cell.code_differs .cm-editor .cm-gutters,
 pluto-cell.code_differs .cm-s-default .CodeMirror-gutters {
     /* background: hsla(46, 70%, 88%, 1); */
     background-color: rgba(214, 172, 35, 0.2);
@@ -2133,23 +2154,28 @@ pluto-cell.code_differs .cm-s-default .CodeMirror-gutters {
     color: #8d8687;
 }
 
+.cm-editor .cm-lineNumbers .cm-gutterElement,
 .cm-s-default .CodeMirror-linenumber {
     color: #8d86875e;
 }
 
+.cm-editor .cm-lineNumbers .cm-gutterElement::after,
 .cm-s-default .CodeMirror-linenumber::after {
     content: "⋅";
     font-size: 0.75rem;
 }
 
+.cm-editor .cm-lineNumbers .cm-gutterElement,
 .cm-s-default .CodeMirror-linenumber {
     font-size: 0px;
 }
 
+.cm-editor .cm-lineNumbers .cm-gutterElement:hover,
 .cm-s-default .CodeMirror-linenumber:hover {
     font-size: 0.75rem;
 }
 
+.cm-editor .cm-lineNumbers .cm-gutterElement:hover::after,
 .cm-s-default .CodeMirror-linenumber:hover::after {
     font-size: 0px;
 }
@@ -2234,11 +2260,16 @@ li.CodeMirror-hint.c_Module::before,
 .cm-s-default .CodeMirror-activeline-background {
     background: #cfd1c4;
 }
+.cm-editor .cm-activeLine {
+    background: unset;
+}
 
+.cm-editor .cm-matchingBracket,
 div.CodeMirror span.CodeMirror-matchingbracket {
     color: unset;
 }
 
+pluto-input:focus-within .cm-editor .cm-matchingBracket,
 pluto-input:focus-within .cm-s-default .CodeMirror-matchingbracket {
     color: black !important;
     font-weight: 700;
@@ -2249,5 +2280,4 @@ pluto-input:focus-within .cm-s-default .CodeMirror-matchingbracket {
 .cm-s-default.CodeMirror-empty {
     color: rgba(0, 0, 0, 0.2);
     font-style: italic;
-}
 }
