--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -601,6 +601,13 @@ nav#at_the_top > pluto-filepicker .cm-editor {
     border-bottom-right-radius: 0;
 }
 
+pluto-filepicker .cm-scroller {
+    scrollbar-width: none; /* Firefox */
+}
+pluto-filepicker .cm-scroller::-webkit-scrollbar {
+    display: none; /* Safari and Chrome */
+}
+
 nav#at_the_top > pluto-filepicker button {
     cursor: pointer;
 }
