--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -2270,3 +2270,13 @@ pluto-input:focus-within .cm-editor .cm-matchingBracket {
 .cm-completionMatchedText {
     text-decoration: unset !important;
 }
+
+/* Required for awesome-line-wrapping-plugin */
+.awesome-wrapping-plugin-indent {
+    text-indent: calc(-1 * var(--indented, 0px) - 1px) !important; /* I have no idea why, but without the - 1px it behaves weirdly periodically */
+    padding-left: calc(var(--indented, 0px) + var(--cm-left-padding, 4px)) !important;
+}
+.awesome-wrapping-plugin-indent > * {
+    /* text-indent apparently cascades... which I think is pretty stupid but this is the fix */
+    text-indent: initial;
+}
